feat(i18n): 統一專案資料結構並新增免責聲明
- 將專案標題與描述遷移至 i18n 翻譯鍵值
- 新增頁尾法律免責聲明 (Disclaimer)
- ProjectCard: 無圖片時隱藏徽章佔位
- 重構: 將 SportLive 專案更名為 SportCompetition
- 更新多個專案的中英文語系檔

--- a/public/locales/en/index.json
+++ b/public/locales/en/index.json
@@ -14,5 +14,6 @@
   },
   "nav": {
     "back": "Back"
-  }
+  },
+  "disclaimer": "Important Disclaimer: The work projects and experiences listed on this website are intended to demonstrate individual technical capabilities and engineering implementation experiences. The content has been 'de-identified' and 'abstracted' and does not contain any original source code from specific companies, undisclosed business plans, or specific client data, in compliance with relevant Non-Disclosure Agreements (NDAs)."
 }
