--- a/public/locales/en/projects/aiChatApp.json
+++ b/public/locales/en/projects/aiChatApp.json
@@ -1,4 +1,5 @@
 {
+  "title": "AI Chat App",
   "shortDesc": "AI chat application integrated with GitHub Models and offline-first architecture.",
   "technologies": ["React Native", "Expo", "SQLite", "GitHub Models API"],
   "badge": "Native Integration",
