--- a/public/locales/zh/index.json
+++ b/public/locales/zh/index.json
@@ -14,5 +14,6 @@
   },
   "nav": {
     "back": "返回"
-  }
+  },
+  "disclaimer": "重要聲明： 本網站所列之工作專案與經驗，旨在展示個人技術能力與工程實作經驗。內容均經過「去識別化」與「抽象化」處理，未包含任何特定公司之原始碼、未公開商業計畫或具體客戶數據，以符合相關保密協議（NDA）。"
 }
